# toolhound

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cases/: default.jsonl  dev.jsonl  slots.yaml  smoke.jsonl  templates.yaml  test.jsonl  tools.yaml
cases/handwritten/: dev.jsonl  test.jsonl
docs/: methodology.md
reports/: attribution-llama-3.2-3b.md  attribution-qwen2.5-0.5b.md  attribution-qwen2.5-1.5b.md  decode-free-vs-constrained-TEST.md  decode-free-vs-constrained-dev.md  run-qwen2.5-0.5b+qwen2.5-1.5b+llama-3.2-3b.md  run-qwen2.5-0.5b.md  run-qwen3.5-2b+granite-3.3-2b+gemma4-12b.md
scripts/: gen_cases.py  smoke.py  validate_cases.py
src/toolprobe/: attribution.py  backend.py  casegen.py  caselint.py  cli.py  grammar.py  models.py  parser.py  report.py  runner.py  scorer.py  templates.py
tests/: test_attribution.py  test_backend_mlx.py  test_backend_temp.py  test_casegen.py  test_caselint.py  test_cases_valid.py  test_cli.py  test_constrained_mlx.py  test_grammar.py  test_hygiene.py  test_methods.py  test_models.py  test_pa_tool.py  test_pa_tool_mlx.py  test_parser.py  test_report.py  test_report_compare.py  test_scorer.py  test_templates.py  test_templates_mlx.py
tests/fixtures/: alias_keys.txt  bare_json.txt  clean_toolcall.txt  codeblock.txt  double_brace.txt  garbage.txt  gemma_tool_call.txt  granite_tool_call.txt  llama_bare.txt  llama_python_tag.txt  llama_toolcall.txt  mistral_style.txt  prose_wrapped.txt  qwen35_function_xml.txt  single_quotes.txt  (+1 more)
(+3 files in other folders)
